--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -25,3 +25,16 @@ html, body {
 .redux-infinite-scroll {
   overflow: hidden;
 }
+
+.ImageHolder {
+  width: 100%;
+
+  img {
+    max-width:100%;
+    max-height: 540px;   
+  }
+
+  input[type="file"] {
+    display: block;
+  }
+}
