--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -5,19 +5,21 @@ html, body {
   height: 100%;
 }
 
-
+.container {
+  max-width: 1200px;
+}
 .DesignGrid {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: flex-start;
-  background-color: #eee;
+  // background-color: #eee;
 }
 
 .DesignItem {
   position: relative; 
-  min-width: 400px;
-  flex-basis: 30%;
+  min-width: 300px;
+  flex-basis: 25%;
   margin: 10px;
 
   img {
@@ -43,7 +45,7 @@ html, body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
+  text-align: center;
 }
 
 .DarkOverlay:hover {
